# genericQuad_ROS

./: CMakeLists.txt  README.md  package.xml  packageInfo.mat
include/genericquad/: MW_custom_RTOS_header.h  genericQuad.h  genericQuad_private.h  genericQuad_types.h  rosnodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_assert.h  rt_nonfinite.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.h  slros_initialize.h  visibility_control.h
launch/: multi_quad_demo.launch
model/: genericQuad.slx
src/: defines.txt  genericQuad.cpp  genericQuad_data.cpp  main.cpp  rosnodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  slros_busmsg_conversion.cpp  slros_initialize.cpp
